[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/OnFloor.gd" type="Script" id=2]
[ext_resource path="res://characters/InAir.gd" type="Script" id=3]
[ext_resource path="res://characters/Dead.gd" type="Script" id=4]
[ext_resource path="res://characters/Exploded.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = -24.0
text = "Player 1"
align = 1

[node name="StateMachine" type="Node" parent="."]

[node name="OnFloor" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="InAir" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Exploded" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="TrailSpawnArea" type="Area2D" parent="."]
position = Vector2( 0, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrailSpawnArea"]
shape = SubResource( 2 )

[node name="Trails" type="Node" parent="."]
